--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/node": "^16.3.2",
+    "@types/react": "^17.0.14",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
     "autoprefixer": "^10.2.6",
+    "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.24.0",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
   }
