--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "@types/node": "^16.3.2",
     "@types/react": "^17.0.14",
+    "mongodb": "^4.0.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.6.20",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "autoprefixer": "^10.2.6",
