--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "dependencies": {
     "@types/node": "^16.3.2",
     "@types/react": "^17.0.14",
-    "mongodb": "^4.0.0",
     "next": "latest",
     "next-auth": "^3.27.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "mongodb": "^3.6.2"
   },
   "devDependencies": {
     "@types/mongodb": "^3.6.20",
