--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^7.30.0",
     "eslint-plugin-react": "^7.24.0",
     "postcss": "^8.3.5",
+    "prettier": "^2.0.5",
     "tailwindcss": "^2.2.4"
   }
 }
