--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "@types/node": "^16.3.2",
     "@types/react": "^17.0.14",
+    "axios": "^0.21.1",
+    "mongodb": "^3.6.2",
     "next": "latest",
     "next-auth": "^3.27.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.3.5",
-    "mongodb": "^3.6.2"
+    "swr": "^0.5.6",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/mongodb": "^3.6.20",
